--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -38,6 +38,7 @@
     "item_more": "More",
     "menu_new_folder": "New folder",
     "menu_select": "Select items",
+    "menu_share_folder": "Share folder",
     "menu_download_folder": "Download folder",
     "menu_download_file": "Download this file",
     "menu_open_cozy": "Open in my Cozy",
