feat: Migrate RenameFile to CozyClient
I duplicated & simplified the reducer, it'll be easier to remove after
the end of the migration.

We now only keep 2 actions in the reducer : start and abort renaming.
The rest is done by the RenameInput component itself

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -284,6 +284,7 @@
     "empty_trash_progress": "Your trash is being emptied. This might take a few moments.",
     "empty_trash_success": "The trash has been emptied.",
     "folder_name": "The element %{folderName} already exists, please choose a new name.",
+    "file_name": "The element %{fileName} already exists, please choose a new name.",
     "folder_generic": "An error occurred, please try again.",
     "folder_abort": "You need to add a name to your new folder if you would like to save it. Your information has not been saved.",
     "offline": "This feature is not available offline.",
