--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -220,7 +220,8 @@
     "moveto": "Move to…",
     "phone-download": "Make available offline",
     "qualify": "Categorize",
-    "history": "History"
+    "history": "History",
+    "sendto": "Send to..."
   },
   "deleteconfirmation": {
     "title": "Delete this element? |||| Delete these elements?",
