fix: Delete message is different if shared by link or cozy-cozy
refactor: Use Stack & Media

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -228,6 +228,7 @@
     "trash": "It will be moved to the Trash. |||| They will be moved to the Trash.",
     "restore": "You can still restore it whenever you want. |||| You can still restore them whenever you want.",
     "shared": "The following contacts whom you shared it with will keep a copy but your changes won't be synchronized anymore. |||| The following contacts whom you shared them with will keep a copy but your changes won't be synchronized anymore",
+    "link": "Link sharing will no longer be active",
     "referenced": "Some of the files within the selection are related to a photo album. They will be removed from it if you proceed to trash them.",
     "cancel": "Cancel",
     "delete": "Remove"
