--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -88,6 +88,14 @@
         "action": "Authorize access",
         "success": "The application has access to your contacts"
       }
+    },
+    "banner": {
+      "shared_from": "Shared from the cozy of",
+      "synchronise": "Synchronise this content in your cozy to be able to modify it or to keep it in case of cancellation of sharing.",
+      "whats_cozy": "Cozy is a secure digital home for all your data, hosted in France - ",
+      "know_more": "More information",
+      "sync_to_mine": "Synchronise in my Cozy",
+      "add_to_mine": "Add to my Cozy"
     }
   },
   "Sharings": {
