--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -39,7 +39,9 @@
     "menu_new_folder": "New folder",
     "menu_select": "Select items",
     "menu_share_folder": "Share folder",
-    "menu_downlad": "Download",
+    "menu_download": "Download",
+    "menu_sync_cozy": "Synchronise in my Cozy",
+    "add_to_mine": "Add to my Cozy",
     "menu_download_folder": "Download folder",
     "menu_download_file": "Download this file",
     "menu_open_cozy": "Open in my Cozy",
