--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -97,7 +97,8 @@
       "whats_cozy": "Cozy is a secure digital home for all your data, hosted in France - ",
       "know_more": "More information",
       "sync_to_mine": "Synchronise in my Cozy",
-      "add_to_mine": "Add to my Cozy"
+      "add_to_mine": "Add to my Cozy",
+      "close": "Close"
     }
   },
   "Sharings": {
