--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -204,6 +204,14 @@
     "head_thumbnail_size": "Switch thumbnail size",
     "row_update_format": "MMM D, YYYY",
     "row_update_format_full": "MMMM D, YYYY",
+    "row_carbonCopy": {
+      "title": "Carbon Copy",
+      "caption": "This document is defined \"authentic and original\" by Cozy Cloud, your Cozy's host, because it can affirm that it comes directly from the %{connectorName} service, without having undergone any modification."
+    },
+    "row_electronicSafe": {
+      "title": "Electronic Safe",
+      "caption": "The original document is secured by your personal digital safe %{connectorName} with certifications that give it probative value and a 50-year conservation guarantee beyond its deposit."
+    },
     "row_read_only": "Share (Read only)",
     "row_read_write": "Share (Read & Write)",
     "row_size_symbols": {
