--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -192,6 +192,14 @@
     "head_name": "Name",
     "head_update": "Last update",
     "head_size": "Size",
+    "head_carbonCopy": {
+      "title": "Carbon Copy",
+      "caption": "Indicates whether the document is defined as \"authentic and original\" by Cozy Cloud, the host of your Cozy, as it can claim that it comes directly from a third-party service, without having undergone any modification."
+    },
+    "head_electronicSafe": {
+      "title": "Electronic Safe",
+      "caption": "Indicates whether the original document is secured by your personal digital safe with the certifications that give it probative value and a 50-year retention guarantee beyond its deposit."
+    },
     "head_status": "Share",
     "head_thumbnail_size": "Switch thumbnail size",
     "row_update_format": "MMM D, YYYY",
