feat: Add Certifications blocks for Viewer Panel

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -532,6 +532,9 @@
       "noapp": "No application found to handle this file.",
       "generic": "An error occurred when opening this file, please try again.",
       "noNetwork": "You're currently offline."
+    },
+    "panel": {
+      "title": "Useful information"
     }
   },
   "Move": {
