feat: Replace "Open with" by "Forward" in actions menu

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -238,7 +238,7 @@
     "rename": "Rename",
     "restore": "Restore",
     "close": "Close",
-    "openWith": "Open with",
+    "forward": "Forward",
     "moveto": "Move to…",
     "phone-download": "Make available offline",
     "qualify": "Categorize",
