feat: Rename create file actions in menus

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -34,9 +34,9 @@
   },
   "toolbar": {
     "item_upload": "Upload",
-    "menu_upload": "Upload files",
+    "menu_upload": "Import files",
     "item_more": "More",
-    "menu_new_folder": "New folder",
+    "menu_new_folder": "Folder",
     "menu_select": "Select items",
     "menu_share_folder": "Share folder",
     "menu_download": "Download",
@@ -45,8 +45,8 @@
     "menu_download_folder": "Download folder",
     "menu_download_file": "Download this file",
     "menu_open_cozy": "Open in my Cozy",
-    "menu_create_note": "New note",
-    "menu_create_shortcut": "New shortcut",
+    "menu_create_note": "Note",
+    "menu_create_shortcut": "Shortcut",
     "empty_trash": "Empty trash",
     "share": "Share",
     "trash": "Remove",
