feat: Add fallback when only office editor returns 404
It could be possible if the fileId is wrong, by editing it manually in the url for example.

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -295,6 +295,7 @@
   },
   "error": {
     "open_folder": "Something went wrong when opening the folder.",
+    "open_file": "Something went wrong when opening the file.",
     "button": {
       "reload": "Refresh now"
     },
