--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -719,5 +719,11 @@
       "spreadsheet": "New spreadsheet",
       "slide": "New presentation"
     }
+  },
+  "Migration": {
+    "title": "Update Cozy Drive",
+    "content": "Cozy Drive needs to update in order to improve its performances. This might take up to several minutes during which you cannot use your app. Do you want to do it now? If you refuse, we will ask you again next time",
+    "confirm": "Ok, let's do it!",
+    "cancel": "No, not now"
   }
 }
