feat: Add encrypted folder option
Note the icon is temporary.
The vault is now unlocked when creating a new folder, and not on the
folder view.

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -37,6 +37,7 @@
     "menu_upload": "Upload files",
     "item_more": "More",
     "menu_new_folder": "Folder",
+    "menu_new_encrypted_folder": "Encrypted folder",
     "menu_select": "Select items",
     "menu_share_folder": "Share folder",
     "menu_download": "Download",
