feat: Download encrypted files from action menu
This allows to select an encrypted file and download it, with a
transparent decryption.
Note that we cannot generate client archive for now as it is currently
handled by the stack. Therefore, we disable the possibility to download
an encrypted folder or several encrypted files at once.

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -302,7 +302,8 @@
     },
     "download_file": {
       "offline": "You should be connected to download this file",
-      "missing": "This file is missing"
+      "missing": "This file is missing",
+      "encryption_many": "You cannot download several encrypted files at once"
     }
   },
   "Error": {
