fix(drive): display reasons of incorrect file name (illegal characters, forbidden name)

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -321,6 +321,9 @@
     "empty_trash_success": "The trash has been emptied.",
     "folder_name": "The element %{folderName} already exists, please choose a new name.",
     "file_name": "The element %{fileName} already exists, please choose a new name.",
+    "file_name_missing": "The file name is missing, please choose a new name.",
+    "file_name_illegal_name": "The name %{fileName} is invalid, please choose a new name.",
+    "file_name_illegal_characters": "The element %{fileName} contains invalid characters: %{characters}",
     "folder_generic": "An error occurred, please try again.",
     "folder_abort": "You need to add a name to your new folder if you would like to save it. Your information has not been saved.",
     "offline": "This feature is not available offline.",
