feat(breadcrumbs): Use MUI Breadcrumb with fully fetched path

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -27,7 +27,8 @@
     "title_sharings": "Sharings",
     "title_shared": "Shared by me",
     "title_activity": "Activity",
-    "title_trash": "Trash"
+    "title_trash": "Trash",
+    "label": "Show path"
   },
   "Toolbar": {
     "more": "More"
