Update the label of the Upload button in a message
I also updated the french translation in Transifex, but don't know if it will be taken into account after updating the original label.

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -291,7 +291,7 @@
   },
   "empty": {
     "title": "You don’t have any files in this folder.",
-    "text": "Click the \"upload\" button to add files to this folder.",
+    "text": "Click the \"Add\" button to add files to this folder.",
     "trash_title": "You don’t have any deleted files.",
     "trash_text": "Move files you don't need anymore to the Trash and permanently delete items to free up storage page."
   },
