--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -251,6 +251,7 @@
     "forward": "Forward",
     "forwardTo": "Forward to...",
     "moveto": "Move to…",
+    "copy": "Copy",
     "phone-download": "Make available offline",
     "qualify": "Categorize",
     "history": "History"
