feat: Rename action "copy" to "duplicate" and change icon

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -251,7 +251,7 @@
     "forward": "Forward",
     "forwardTo": "Forward to...",
     "moveto": "Move to…",
-    "copy": "Copy",
+    "duplicate": "Duplicate",
     "phone-download": "Make available offline",
     "qualify": "Categorize",
     "history": "History"
