feat: Move search from cozy-bar to cozy-drive
Before, the search input was into cozy-bar and the search logic into cozy-drive. They were contacting through intent and postMessage. This commit bring everything in the same place in cozy-drive.

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -732,5 +732,9 @@
     "content": "Cozy Drive needs to update in order to improve its performances. This might take up to several minutes during which you cannot use your app. Do you want to do it now? If you refuse, we will ask you again next time",
     "confirm": "Ok, let's do it!",
     "cancel": "No, not now"
+  },
+  "searchbar": {
+    "placeholder": "Search anything",
+    "empty": "No result has been found for the query “%{query}”"
   }
 }
