--- a/src/photos/locales/en.json
+++ b/src/photos/locales/en.json
@@ -264,5 +264,8 @@
     "desc": "Please remove files, empty your trash or increase your disk space before uploading files again.",
     "confirm": "OK",
     "increase": "Increase your disk space"
+  },
+  "button": {
+    "back": "Back"
   }
 }
