refacto: Use generateWebLink from cozy-client
This commit disable some warnings and improve accessibility. As suggest, I switch import for generateWebLink from AppLinker to cozy-client. I also share the app slug with the app property with the AppLinker

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -725,6 +725,9 @@
       "text": "New text document",
       "spreadsheet": "New spreadsheet",
       "slide": "New presentation"
+    },
+    "toolbar": {
+      "goToHome": "Go to home"
     }
   },
   "Migration": {
