feat: Add an editing FAB on desktop
The FAB is hide after switching to editing mode

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -728,6 +728,10 @@
     },
     "toolbar": {
       "goToHome": "Go to home"
+    },
+    "actions": {
+      "edit": "Edit",
+      "validate": "Validate"
     }
   },
   "Migration": {
@@ -741,7 +745,8 @@
     "empty": "No result has been found for the query “%{query}”"
   },
   "button": {
-    "back": "Back"
+    "back": "Back",
+    "add": "Add"
   },
   "search": {
     "action": "Search",
