feat: Add item with the more menu on mobile

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -54,6 +54,7 @@
     "trash": "Remove",
     "leave": "Leave shared folder & delete it",
     "menu_add": "Add",
+    "menu_add_item": "Add an item",
     "menu_onlyOffice": {
       "text": "Text document",
       "spreadsheet": "Spreadsheet",
