--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -755,5 +755,14 @@
       "title": "No result",
       "subtitle": "No result has been found for the query “%{query}”"
     }
+  },
+  "PushBanner": {
+    "quota": {
+      "text": "You've almost run out of storage space. If you reach the limit, you won't be able to add any more files. You can delete files, empty your bin or change your offer.",
+      "actions": {
+        "first": "I understand",
+        "second": "Check our plans"
+      }
+    }
   }
 }
