feat(backup): Add a button to open backup when done
Open in Drive on Android
Go to albums in iOS

To be as close as possible as native features

--- a/src/photos/locales/en.json
+++ b/src/photos/locales/en.json
@@ -287,6 +287,8 @@
       "verification": "Verification",
       "startBackup": "Start backup",
       "backupInProgress": "Backup in progress %{alreadyBackupedCount} / %{totalCount}",
+      "openInDrive": "Open in Drive",
+      "seeMyAlbums": "See my albums",
       "saved": "Saved",
       "cancel": "Cancel"
     },
