feat(File): Add new sharing status badge before actions

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -218,6 +218,7 @@
       "ZB": "ZB",
       "YB": "YB"
     },
+    "row_sharing_shortcut_aria_label": "New sharing shortcut",
     "load_more": "Load More",
     "mobile": {
       "head_name_asc": "A-Z",
