feat(backup): Display last backup status

--- a/src/photos/locales/en.json
+++ b/src/photos/locales/en.json
@@ -304,6 +304,11 @@
       "description": "Backup automatically all your photos and videos from your mobile devices",
       "install": "Install our app"
     },
+    "LastBackupStatus": {
+      "lastBackup": "Last backup:",
+      "success": "%{smart_count} element backed up |||| %{smart_count} elements backed up",
+      "partialSuccess": "%{backedUpMediaCount}/%{smart_count} element backed up |||| %{backedUpMediaCount}/%{smart_count} elements backed up"
+    },
     "AllowPermissionsModal": {
       "title": "Allow access to your photos and videos",
       "description": "Cozy needs access to the photos and videos stored on your device in order to synchronize them.",
