--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -587,7 +587,7 @@
     "sharedFolderInsideAnother": {
       "title": "Cannot be moved",
       "content_1": "You want to move a shared element into a shared folder. This type of move is not allowed.",
-      "content_2": "If you still wish to move %{source} to %{destination}, please stop sharing it. |||| If you still wish to move %{source} to %{destination}, please stop sharing :",
+      "content_2": "If you still wish to move %{source} to %{destination}, please stop sharing :",
       "cancel": "Cancel move",
       "confirm": "Stop sharing"
     }
