feat: Improve share wording into confirm delete modal

--- a/src/drive/locales/en.json
+++ b/src/drive/locales/en.json
@@ -263,7 +263,9 @@
     "title": "Delete this element? |||| Delete these elements?",
     "trash": "It will be moved to the Trash. |||| They will be moved to the Trash.",
     "restore": "You can still restore it whenever you want. |||| You can still restore them whenever you want.",
-    "shared": "The following contacts whom you shared it with will keep a copy but your changes won't be synchronized anymore. |||| The following contacts whom you shared them with will keep a copy but your changes won't be synchronized anymore",
+    "share_accepted": "Sharing will be stopped. The following contacts will keep a copy, but your changes will no longer be synchronised:",
+    "share_waiting": "Sharing will be stopped. The following contacts will no longer be able to accept sharing and will no longer be able to access shared content:",
+    "share_both": "Sharing will be stopped. This means that contacts who have stored files in their Cozy will keep a copy, while other contacts will no longer be able to access shared content:",
     "link": "Link sharing will no longer be active",
     "referenced": "Some of the files within the selection are related to a photo album. They will be removed from it if you proceed to trash them.",
     "cancel": "Cancel",
